--- a/Joyeria/Secciones/QuienesSomos.html
+++ b/Joyeria/Secciones/QuienesSomos.html
@@ -32,7 +32,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contacto" style="color: black;">Quienes somos</a>
+                    <a class="nav-link" href="QuienesSomos.html" style="color: black;">Quienes somos</a>
                 </li>
             </ul>
         </div>
