--- a/Joyeria/Index.html
+++ b/Joyeria/Index.html
@@ -141,10 +141,13 @@
       </section>
     </aside>
   </div>
-
+  <footer class="bg-dark text-light py-3">
+    <div class="container text-center">
+    <p>&copy; 2023 El Espacio del Orfebre</p>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-
   <script src="js/DesplegueMenu.js"></script>
   <script src="js/validadores.js"></script>
 </body>
