--- a/Joyeria/Productos/Aros.html
+++ b/Joyeria/Productos/Aros.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../Secciones/QuienesSomos.html" style="color: black;">Quienes somos</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../Secciones/Cobertura.html" style="color: black;">Cobertura de Envios</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -88,7 +91,14 @@
                 </div>
             </div>
         </div>
+    </div>
+    <footer class="bg-dark text-light py-3">
+        <div class="container text-center">
+        <p>&copy; 2023 El Espacio del Orfebre</p>
+        </div>
+    </footer>
 	
+    <script src="../js/DesplegueMenu.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
